# Goedemorgen

./: CMakeLists.txt  Config.py  Email.py  Goedemorgen  Makefile  main.py  readme.md  todo.md
config/: niek.json  sample.json  test.json
data/20180824/: Weer52.99483_6.55915.json
data/20180825/: Weer52.99483_6.55915.json
lib/: Functions.py  __init__.py
modules/: ANWB.py  Afval.py  Agenda.py  Downtime.py  DowntimePi.py  LastFmDisconnected.py  LastFmRecommendation.py  MarkdownTodo.py  Module.py  Muspy.py  SociaalWerker.py  SonarrRadarr.py  Subsonic.py  Syncthing.py  Weer.py  _Module.py  __init__.py
notifiers/: Email.py  PushBullet.py  __init__.py
php_helpers/downtime/: ping.php  ping.sh
php_helpers/notifications/: index.php  read.php
secrets/: readme.md
src/: main.cpp
src/bronnen/: Afval.cpp  Afval.h  Bron.cpp  Bron.h  Weer.cpp  Weer.h
